# Products.PythonScripts

./: .coveragerc  .gitignore  .meta.toml  .travis.yml  CHANGES.rst  CHANGES.txt  MANIFEST.in  README.rst  README.txt  buildout.cfg  buildout4.cfg  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
src/Products/PythonScripts/: PythonScript.py  Utility.py  __init__.py  standard.py
src/Products/PythonScripts/Extensions/: RemotePS.py
src/Products/PythonScripts/tests/: testBindings.py  testPythonScript.py
src/Products/PythonScripts/tests/tscripts/: complete.ps  complex_print.ps  ps_2.13.2.pkl  simple_print.ps
src/Products/PythonScripts/www/: default_content  default_py2  default_py3  pyScriptAdd.dtml  pyScriptEdit.dtml  pyScriptProxy.dtml
